fix: Simplify GitHub Pages workflow with correct artifact handling

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -24,12 +24,10 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
       
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v2
         with:
-          name: github-pages
           path: .
-          if-no-files-found: error
 
   deploy:
     needs: build
